Updating localizations with the missing strings replaced until they're completed. en-US/pl-PL locales are 100% complete (note: Teo is quick with Polish translations!).

--- a/ubiquity/chrome/locale/ca/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/ca/aboutubiquitytutorial.properties
@@ -1,130 +1,130 @@
-#
+###### Tutorial start page
 
-tutorial.welcome=Us donem la benvinguda a la guia de l'Ubiquity
-tutorial.fromthestart=Feu clic aquí per a començar des del començament
-tutorial.fromthemiddle=Comença des del mig:
-tutorial.howtostart=Com iniciar l'Ubiquity
-tutorial.previews=Previsualitzacions (ordre de l'oratge)
-tutorial.abbreviations=Abreviacions (Calcula)
-tutorial.suggestions=La llista de suggeriments (Google)
-tutorial.selecting=Selecció, execució (tradueix, mapa)
-tutorial.morecommands=Com aconseguir ajudar i aprendre més ordres
-#
+tutorial.welcome=Welcome to the Ubiquity Tutorial.
+tutorial.fromthestart=Click Here to Start From The Beginning
+tutorial.fromthemiddle=Start from the middle:
+tutorial.howtostart=How to start Ubiquity
+tutorial.previews=Previews (Weather command)
+tutorial.abbreviations=Abbreviations (Calculate)
+tutorial.suggestions=The Suggestion List (Google)
+tutorial.selecting=Selecting, Executing (Translate, Map)
+tutorial.morecommands=How to get help and learn more commands
+##### Stage 01 (part 1 of 6) #####
 
-tutorial.stage01h1=Guia de l'Ubiquity, part 1 de 6: Com iniciar l'Ubiquity
-tutorial.stage01p1=Us donem la benvinguda a la guia de l'Ubiquity.
-tutorial.stage01p2=Comencem. Per a cridar l'Ubiquity, feu ara:
-tutorial.stage01p3=Mantingueu premuda la tecla %S i a continuació premeu la tecla %S.
-#
+tutorial.stage01h1=Ubiquity Tutorial, part 1 of 6: How to start Ubiquity
+tutorial.stage01p1=Welcome to the Ubiquity tutorial.
+tutorial.stage01p2=Let's get started.  To summon Ubiquity, do this now:
+tutorial.stage01p3=Hold down the %S key and tap the %S key.
+##### Stage 02
 
-tutorial.stage02p1=Aquesta és el <strong>quadre d'entrada</strong> de l'Ubiquity. Podeu escriure-hi les vostres ordres.
-tutorial.stage02p2=Si voleu sortir de l'Ubiquity sense escriure-hi cap ordre, <strong>premeu la tecla d'escapamanet</strong>. Proveu-ho ara.
-#
+tutorial.stage02p1=This is the Ubiquity <strong>input box</strong>.  You can type commands here.
+tutorial.stage02p2=If you want to get out of Ubiquity without giving a command, <strong>tap the Escape key</strong>.  Try that now.
+##### Stage 03 (part 2 of 6) #####
 
-tutorial.stage03h1=Guia de l'Ubiquity, part 1 de 6: ordre de l'oratge i previsualitzacions
-tutorial.stage03p1=D'acord, a continuació aprenguem una ordre. Torneu a cridar l'Ubiquity...
-tutorial.stage03p2=(Recordeu, <strong>mantingueu premuda la tecla %S i a continuació premeu la tecla %S</strong>.)
-#
+tutorial.stage03h1=Ubiquity Tutorial, part 2 of 6: Weather command and Previews
+tutorial.stage03p1=OK, so now let's learn a command. Summon Ubiquity again...
+tutorial.stage03p2=(Remember, <strong>hold down the %S key and tap the %S key</strong>.)
+##### Stage 04
 
-tutorial.stage04p1=Ara escriviu el mot <strong>oratge</strong>...
-#
+tutorial.stage04p1=Now type the word <strong>weather</strong>...
+##### Stage 05
 
-tutorial.stage05p1=Fins i tot abans d'escriure-hi, l'<strong>area de previsualització</strong> mostra una previsualització dels resultats de les vostres ordres — en aquest cas, un informe meteorològic.
-tutorial.stage05p2=Si no introduïu cap ubicació, l'ordre <em>oratge</em> mira d'endevinar on us trobeu.
-tutorial.stage05p3=Ara donem una ubicació: <strong>introduïu un espai, i llavors escriviu 'a Reus'</strong>. (Així doncs el resultat serà: 'oratge a Reus'.)
-#
+tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command &#8212; in this case, a weather report.
+tutorial.stage05p2=If you don't enter a location, the <em>weather</em> command takes a guess as to where you are.
+tutorial.stage05p3=Now let's give it a location: <strong>type a space, and then type 'near chicago'</strong>. (So your whole input will say: 'weather near chicago'.)
+##### Stage 06
 
-tutorial.stage06p1=Veieu com funciona? Canvieu &quot;Reus&quot; i proveu altres llocs.
-tutorial.stage06p2=Quan hàgiu comprovat l'oratge, <strong>premeu la tecla d'escapamanet.</strong>
-#
+tutorial.stage06p1=See how that works?  Feel free to delete &quot;chicago&quot; and try some other locations.
+tutorial.stage06p2=When you're done checking the weather, <strong>hit the escape key.</strong>
+##### Stage 07 (part 3 of 6) #####
 
-tutorial.stage07h1=Guia de l'Ubiquity, part 3 de 6: Ordre calcula i abreviacions
-tutorial.stage07p1=Torneu a cridar l'Ubiquity, i n'aprendreu més ordres.
-#
+tutorial.stage07h1=Ubiquity Tutorial, part 3 of 6: Calculate command and Abbreviations
+tutorial.stage07p1=Summon Ubiquity again, and we'll learn some more commands.
+##### Stage 08
 
-tutorial.stage08p1=Aquesta vegada, <strong>simplement escriviu la lletra 'c'</strong> (en minúscules) i vegeu què passa.
-#
+tutorial.stage08p1=This time, <strong>type just the letter 'c'</strong> (lower-case) and see what happens.
+##### Stage 09
 
-tutorial.stage09p1=La <strong>llista de suggeriments</strong> de l'Ubiquity mostra les ordres que comencen amb la lletra 'C'.
-tutorial.stage09p2=Posem que volem l'ordre <em>calcula</em>. No heu d'escriure el nom de l'ordre sencer. Simplement <strong>escriviu les lletres 'al'</strong> (talment que es llegeixi <strong>'cal'</strong>).
-#
+tutorial.stage09p1=The Ubiquity <strong>suggestion list</strong> displays commands that start with the letter 'C'.
+tutorial.stage09p2=Let's say you want the <em>calculate</em> command.  You don't have to type the whole command name.  Just <strong>type the letters 'al'</strong> (so that your input says <strong>'cal'</strong>).
+##### Stage 10
 
-tutorial.stage10p1=Ara <strong>escriviu un espai, i a continuació 22/7</strong> (la vostra entrada seria <strong>'cal 22/7'</strong>.)
-#
+tutorial.stage10p1=Now <strong>type a space, and then type 22/7</strong> (so that your input says <strong>'cal 22/7'</strong>.)
+##### Stage 11
 
-tutorial.stage11p1=L'ordre <em>calcula</em> us mostrarà el resultat de l'expressió aritmètica que hi escriviu.
-tutorial.stage11p2=Quan hàgiu acabat d'experimentar amb <em>calcula</em>, <strong>premeu la tecla d'escapament</strong>.
-#
+tutorial.stage11p1=The <em>calculate</em> command will show you the result of any arithmetic expression you type in.
+tutorial.stage11p2=When you're done experimenting with <em>calculate</em>, <strong>hit the escape key.</strong>
+##### Stage 12 (part 4 of 6) #####
 
-tutorial.stage12h1=Guia de l'Ubiquity, part 4 de 6: l'ordre Google i la llista de suggeriments
-tutorial.stage12p1=Torneu a cridar a l'Ubiquity...
-#
+tutorial.stage12h1=Ubiquity Tutorial, part 4 of 6: Google command and the suggestion list
+tutorial.stage12p1=Summon Ubiquity again...
+##### Stage 13
 
-tutorial.stage13p1=Posem que voleu cercar al Google 'formatge'.
-tutorial.stage13p2=Escriviu la lletra 'g', un espai, i la paraula 'formatge'.
-tutorial.stage13p3=(Com ara 'g formatge').
-#
+tutorial.stage13p1=Let's say you want to search Google for cheese.
+tutorial.stage13p2=Type the letter 'g', a space, and the word 'cheese'.
+tutorial.stage13p3=(Like, 'g cheese').
+##### Stage 14
 
-tutorial.stage14p1=A la llista de suggeriments, podeu veure diferents ordres que comencen amb 'g'. Podeu utilitzar la fletxa de dalt i baix de les tecles del cursor per a moure-vos per la llista. Proveu-ho ara:
-tutorial.stage14p2=<strong>premeu la fletxa de baix del cursor</strong> fins que l'ordre <em>google</em> estigui ressaltada.
-#
+tutorial.stage14p1=In the suggestion list, you can see several commands that start with 'g'.  You can use the up-arrow and down-arrow keys to move through the suggestion list.  Try it now:
+tutorial.stage14p2=<strong>tap the down-arrow key</strong> until the <em>google</em> command is hilighted.
+##### Stage 15
 
-tutorial.stage15p1=La previsualització de l'ordre <em>Google</em> mostra una porció de cada resultat que coincideix amb el vostre terme de cerca.
-tutorial.stage15p2=Aquells títols són enllaços &#8212; podeu clicar-los per a obrir la pàgina en una pestanya nova.
-tutorial.stage15p3=Quan hàgiu acabat, tanqueu la pàgina i torneu aquí, o simplement <strong>premeu Esc</strong> per a continuar amb la guia.
-#
+tutorial.stage15p1=The <em>Google</em> command preview shows a snippet from each search result matching your search term.
+tutorial.stage15p2=Those titles are links &#8212; you can click on one of them to open the page in a new tab.
+tutorial.stage15p3=When you're done, close that page and come back here, or just <strong>tap escape</strong> to move on with the tutorial.
+##### Stage 16 (part 5 of 6) #####
 
-tutorial.stage16ah1=Part 5 de 6: Selecció i execució
-tutorial.stage16ap1=Posem que esteu navegant la xarxa i us trobeu amb una adreça &#8212; com la del quadre de sota &#8212; i voleu veure-la en el mapa.
-tutorial.stage16ap2=Les ordres de l'Ubiquity poden funcionar en la vostra selecció de text. Proveu-ho: feu servir el ratolí per a <strong>seleccionar l'adreça</strong> de sota. Llavors, <strong>crideu l'Ubiquity</strong>.
-tutorial.stage16bp1=Ara <strong>escriviu 'mapa'</strong>.
-tutorial.stage16cp1=La previsualització mostra un Google Map de l'adreça. Podeu clicar al mapa per a fer-lo més gran; llavors podeu desplaçar-vos-hi arrossegant-lo. Proveu-ho ara.
-tutorial.stage16cp2=Quan ho hàgiu fet, <strong>premeu Esc</strong>.
-#
+tutorial.stage16ah1=Part 5 of 6: Selecting and Executing
+tutorial.stage16ap1=Say you're browsing the web and you come across an address &#8212; like the one in the box below &#8212; and you'd like to see it on a map.
+tutorial.stage16ap2=Ubiquity commands can work on your text selection.  Try it out: Use the mouse to <strong>select the address</strong> below. Then <strong>summon Ubiquity</strong>.
+tutorial.stage16bp1=Now <strong>type 'map'</strong>.
+tutorial.stage16cp1=The preview shows a Google Map of the address. You can click on this map to make it bigger; then you can scroll around on the map by dragging it.  Try that now.
+tutorial.stage16cp2=When you're done trying out the map, <strong>hit escape</strong>.
+##### Stage 17
 
-tutorial.stage17p1=Un altre exemple, considerant que esteu navegant per la xarxa i us trobeu amb text escrit en una llengua que no podeu llegir &#8212; com el text en japonès a sota. Podeu utilitzar l'Ubiquity per a obtenir-ne una traducció.
-tutorial.stage17p2=Primer <strong>seleccioneu el text en japonès de sota</strong>, tot seguit crideu l'Ubiquity i <strong>utilitzeu l'ordre <em>tradueix</em></strong>.
-tutorial.stage17p3=(escriviu-hi 'tradueix', o simplement 'tr')
-#
+tutorial.stage17p1=As another example, say you're browsing the web and you come across something written in a language you can't read &#8212; like the Japanese text below.  You can use Ubiquity to get a translation.
+tutorial.stage17p2=First <strong>select the Japanese text below</strong>, then bring up Ubiquity and <strong>use the <em>translate</em> command</strong>.
+tutorial.stage17p3=(type 'translate', or just 'tr').
+##### Stage 18
 
-tutorial.stage18p1=En aquest punt, podeu escriure algunes paraules que voleu que tradueixi l'Ubiquity. Però com podeu veure en l'àrea de previsualització, l'Ubiquity ja està traduint els mots que heu seleccionat.
-tutorial.stage18p2=A continuació, <strong>premeu la tecla Retorn</strong> per a executar l'ordre.
-#
+tutorial.stage18p1=At this point, you could type in some words that you want to have Ubiquity translate.  But as you can see in the preview area, Ubiquity is already translating the words that you have selected.
+tutorial.stage18p2=Next, <strong>tap the enter key</strong> to execute the command.
+##### Stage 19
 
-tutorial.stage19p1=Adoneu-vos com el text en japonès que hàvieu seleccionat ha estat <strong>reemplaçat</strong> amb la traducció. Això és perquè heu executat l'ordre en prémer 'Retorn'.
-tutorial.stage19p2=Cada ordre fa quelcom diferent quan l'executeu. Sovint obrirà una pàgina nova, o bé canviarà quelcom de la pàgina actual.
-tutorial.stage19p3=Feu clic aquí per a continuar
-#
+tutorial.stage19p1=Notice how the Japanese text that you selected was <em>replaced</em> with the translation.  That's because you executed the command by pressing 'enter'.
+tutorial.stage19p2=Each command does something different when you execute it.  Most often, it will open a new page, or change something on the current page.
+tutorial.stage19p3=Click here to continue
+##### Stage 20
 
-tutorial.stage20p1=Mirem un altre exemple. Posem que esteu navegant per la xarxa, i us trobeu amb una paraula que no coneixeu &#8212; com la que es troba en el quadre de sota &#8212; i voleu saber què vol dir.
-tutorial.stage20p2=Seleccioneu la paraula en el quadre de sota i llavors crideu a l'Ubiquity.
-#
+tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word &#8212; like the one in the box below &#8212; and you'd like to look it up.
+tutorial.stage20p2=Select the word in the box below and then summon Ubiquity.
+##### Stage 21
 
-tutorial.stage21p1=Ara <strong>utilitzeu l'ordre del google</strong> (escriviu 'google' o simplement 'goo').
-#
+tutorial.stage21p1=Now <strong>use the google command</strong> (type 'google' or just 'goo').
+##### Stage 22
 
-tutorial.stage22p1=Ara, si la previsualització de l'ordre <em>google</em> us diu què voleu saber, llavors heu acabat &#8212; podeu ignorar l'Ubiquity i continuar amb allò que fèieu.
-tutorial.stage22p2=Però si voleu més informació, podeu prémer la tecla Retorn per a executar l'ordre <em>google</em>, que obrirà els resultats de cerca en una pàgina nova.
-tutorial.stage22p3=És al vostre criteri.
-#
+tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done &#8212; you can dismiss Ubiquity and go on your way.
+tutorial.stage22p2=But if you want more information, you can tap the enter key to execute the <em>google</em> command, which will open the search results in a new page.
+tutorial.stage22p3=It's up to you.
+##### Stage 23 (part 6 of 6) #####
 
-tutorial.stage23h1=Part 6 de 6: Aconseguir ajuda i aprendre més ordres
-tutorial.stage23p1=Fins ara heu après les ordres <em>oratge</em>, <em>calcula</em>, <em>google</em>, <em>tradueix</em>, i <em>mapa</em>. Això és un bon començament, però hi ha dotzenes d'ordres més incloses amb l'Ubiquity &#8212; i podeu trobar-ne més a la xarxa.
-tutorial.stage23p2=Com podeu saber quines ordres són disponibles?
-tutorial.stage23p3=Una forma és emprar l'ordre <em>ajuda</em>.
-tutorial.stage23p4=Crideu a l'Ubiquity...
-#
+tutorial.stage23h1=Part 6 of 6: Getting Help and Learning More Commands
+tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity &#8212; plus you can find more on the Web.
+tutorial.stage23p2=How will you find out what commands are available?
+tutorial.stage23p3=One way is by using the <em>help</em> command.
+tutorial.stage23p4=Summon Ubiquity...
+##### Stage 24
 
-tutorial.stage24p1=Suposem que voleu saber si hi ha cap ordre que tingui a veure amb pestanyes. Podeu esbrinar-ho amb l'ordre <em>ajuda</em> així:
-tutorial.stage24p2=escriviu 'ajuda pestanya'.
-#
+tutorial.stage24p1=Suppose you want to know if there are any commands that deal with tabs.  You can use the <em>help</em> command like this:
+tutorial.stage24p2=type 'help tab'.
+##### Stage 25
 
-tutorial.stage25p1=A la llista de suggeriments, podeu veure totes les ordres que tenen el terme 'pestanya' al nom.
-tutorial.stage25p2=Feu servir les tecles del cursor per a moure-us per la llista de suggeriments. L'àrea de previsualització mostra informació de cada ordre que ressalteu.
-tutorial.stage25p3=Quan hàgiu acabat, <strong>premeu Esc</strong>.
-#
+tutorial.stage25p1=In the suggestion list, you can see all of the commands that have 'tab' in their names.
+tutorial.stage25p2=Use the arrow keys to move through the suggestion list.  The preview area shows help information about each command that you highlight.
+tutorial.stage25p3=When you're done, <strong>tap escape</strong>.
+##### Stage 26
 
-tutorial.stage26p1=Finalment, hi ha l'ordre de <em>llista d'ordres de l'Ubiquity</em>. Aquesta ordre us portarà a la pàgina que mostra totes les ordres instal·lades. Podeu saber un munt d'aspectes útils tot navegant la llista.
-tutorial.stage26p2=Aquí s'acaba la guia. A partir d'ara, quan aneu a la pàgina de la llista d'ordres, podeu experimentar personalment com aprendre noves ordres al vostre ritme.
-tutorial.stage26p3=Crideu a l'Ubiquity, escriviu 'llista' i premeu la tecla Retorn per a executar-ho.
-tutorial.stage26p4=Adéu-siau!
+tutorial.stage26p1=Finally, there's the <em>list ubiquity commands</em> command. This command will take you to a page that shows every command Ubiquity has installed.  You can learn all sorts of useful things by browsing the command list page!
+tutorial.stage26p2=This is the end of the tutorial. Once you go to the command list page, you are on your own to experiment and learn new commands at your own pace.
+tutorial.stage26p3=Summon Ubiquity, type 'list', and tap the enter key to execute.
+tutorial.stage26p4=Good-bye!
