--- a/ubiquity/chrome/locale/ca/devubiquity.dtd
+++ b/ubiquity/chrome/locale/ca/devubiquity.dtd
@@ -1,59 +1,59 @@
 <!-- Page Titles for all documents in this DTD -->
-<!ENTITY ubiquity.pagetitle.PlayPen "Entorn de prova del Parser 2 de l'&appTitle;">
-<!ENTITY ubiquity.pagetitle.QuickLaunch "Inici ràpid des de l'escriptori de l'&appTitle;">
-<!ENTITY ubiquity.pagetitle.Persistence "El projecte de persistència de l'Ubiquity">
-<!ENTITY ubiquity.pagetitle.SuggMemDebug "Depurador de memòria dels suggeriments">
-<!ENTITY ubiquity.pagetitle.TestSuite "Conjunt de prova de l'&appTitle;">
-<!ENTITY ubiquity.pagetitle.Tuner "Afinador de tipus de nom de l'&appTitle;">
+<!ENTITY ubiquity.pagetitle.PlayPen "&appTitle; Parser 2 Playpen">
+<!ENTITY ubiquity.pagetitle.QuickLaunch "&appTitle; Desktop QuickLaunch">
+<!ENTITY ubiquity.pagetitle.Persistence "The Ubiquity Persistence Project">
+<!ENTITY ubiquity.pagetitle.SuggMemDebug "Suggestion Memory Debugger">
+<!ENTITY ubiquity.pagetitle.TestSuite "&appTitle; Test Suite">
+<!ENTITY ubiquity.pagetitle.Tuner "&appTitle; Nountype Tuner">
 <!-- Common errors -->
-<!ENTITY ubiquity.error.WarningParser2 "No feu servir el Parser 2! L'afinador de tipus de nom només funciona amb el Parser 2. Consulteu l'<a href='chrome://ubiquity/content/settings.xhtml'>activació del Parser 2 (aka Next Generation Parser)</a>, reinicieu el Firefox, i torneu-ho a provar.">
-<!ENTITY ubiquity.error.WarningGUbiquity "El <code>gUbiquity</code> no s'ha carregat correctament. Molt probablement això vol dir que heu carregat la pàgina mentre carregàveu la finestra, i la pàgina s'ha carregat abans del chrome de la finestra; en aquest cas, podeu tornar a carregar la pàgina i hauria de funcionar. Alternativament, podria haver-hi algun problema amb algun codi.">
+<!ENTITY ubiquity.error.WarningParser2 "You're not using Parser 2! The nountype tuner currently only works with Parser 2. Please <a href='chrome://ubiquity/content/settings.xhtml'>turn on Parser 2 (aka Next Generation Parser)</a>, restart Firefox, and try again.">
+<!ENTITY ubiquity.error.WarningGUbiquity "<code>gUbiquity</code> was not loaded properly. Most likely this means you loaded this page at the same time that you loaded the window, and this page loaded before the window chrome, in which case you can just reload this page and it should work. Otherwise, there may actually be a problem with some code.">
 <!-- Common strings -->
-<!ENTITY ubiquity.common.OptionAutoRun "analitza automàticament en cada actualització">
-<!ENTITY ubiquity.common.OptionGSync "sincronitza amb el <code>gUbiquity</code>">
-<!ENTITY ubiquity.common.ButtonRun "executa!">
-<!ENTITY ubiquity.common.HeaderSettings "Paràmetres">
+<!ENTITY ubiquity.common.OptionAutoRun "automatically parse on update">
+<!ENTITY ubiquity.common.OptionGSync "sync with <code>gUbiquity</code>">
+<!ENTITY ubiquity.common.ButtonRun "run!">
+<!ENTITY ubiquity.common.HeaderSettings "Settings">
 <!-- Test Suite chrome/content/playpen.xhtml -->
-<!ENTITY ubiquity.playpen.Header "Entorn de prova del Parser 2 de l'&appTitle;">
-<!ENTITY ubiquity.playpen.ShortDesc "Això és un entorn de prova i d'optimització de l'analitzador per al proper analitzador de l'Ubiquity.">
-<!ENTITY ubiquity.playpen.OptionMaxSuggs "màxim de suggeriments:">
-<!ENTITY ubiquity.playpen.OptionShowInfo "mostra la informació de l'analitzador">
-<!ENTITY ubiquity.playpen.OptionShowLineage "mostra el llinatge de l'analitzador">
-<!ENTITY ubiquity.playpen.FlushOnParse "refresca la memòria en cau en analitzar (necessari per a temps acurats)">
-<!ENTITY ubiquity.playpen.WordTimes "vegades">
-<!ENTITY ubiquity.playpen.SelectionText "text de selecció (per a la substitució d'anàfores)">
-<!ENTITY ubiquity.playpen.EnvironmentInfo "Informació del sistema <small>(cliqueu-hi per a canviar-ho)</small>">
-<!ENTITY ubiquity.playpen.ActiveSemanticRoles "Rols semàntics actius:">
-<!ENTITY ubiquity.playpen.NotesOverlapping "(els rols que es solapen amb els mateixos delimitadors indiquen delimitadors sinònims)">
-<!ENTITY ubiquity.playpen.ActiveNounTypes "Tipus de nom actius:">
-<!ENTITY ubiquity.playpen.ScoreFunctions "(vegeu el codi font per a les funcions de puntuació)">
-<!ENTITY ubiquity.playpen.ActiveVerbs "Verbs actius:">
-<!ENTITY ubiquity.playpen.WordSuggestions "Suggeriments">
-<!ENTITY ubiquity.playpen.WordKey "Clau:">
+<!ENTITY ubiquity.playpen.Header "&appTitle; Parser 2 Playpen">
+<!ENTITY ubiquity.playpen.ShortDesc "This is a parser testing and optimization playpen for the upcoming Ubiquity parser.">
+<!ENTITY ubiquity.playpen.OptionMaxSuggs "max suggestions:">
+<!ENTITY ubiquity.playpen.OptionShowInfo "display parse info">
+<!ENTITY ubiquity.playpen.OptionShowLineage "display parse lineage">
+<!ENTITY ubiquity.playpen.FlushOnParse "flush cache on parse (necessary for accurate timings)">
+<!ENTITY ubiquity.playpen.WordTimes "times">
+<!ENTITY ubiquity.playpen.SelectionText "selection text (for anaphora substitution):">
+<!ENTITY ubiquity.playpen.EnvironmentInfo "Environment info <small>(click me to toggle)</small>">
+<!ENTITY ubiquity.playpen.ActiveSemanticRoles "Active semantic roles:">
+<!ENTITY ubiquity.playpen.NotesOverlapping "(overlapping roles with the same delimiters indicate synonymous delimiters)">
+<!ENTITY ubiquity.playpen.ActiveNounTypes "Active noun types:">
+<!ENTITY ubiquity.playpen.ScoreFunctions "(see source for score functions)">
+<!ENTITY ubiquity.playpen.ActiveVerbs "Active verbs:">
+<!ENTITY ubiquity.playpen.WordSuggestions "Suggestions">
+<!ENTITY ubiquity.playpen.WordKey "KEY:">
 <!ENTITY ubiquity.playpen.WordVerb "verb">
-<!ENTITY ubiquity.playpen.WordObject "objecte">
+<!ENTITY ubiquity.playpen.WordObject "object">
 <!ENTITY ubiquity.playpen.WordPrefix "prefix">
 <!ENTITY ubiquity.playpen.WordArgument "argument">
-<!ENTITY ubiquity.playpen.VerbsNote "(desplaceu-vos sobre el verb per a veure'l en detall i sobre els prefixos per a veure'n els rols semàntics associats)">
-<!ENTITY ubiquity.playpen.CurrentParse "Analitzador actual:">
-<!ENTITY ubiquity.playpen.AvgTimingResults "ms (mitja: <span class='avg'></span> ms)">
-<!ENTITY ubiquity.playpen.ParseTree "Arbre actual d'anàlisi de consultes:">
+<!ENTITY ubiquity.playpen.VerbsNote "(hover over the verb to see the actual verb and over prefixes to see the associated semantic role)">
+<!ENTITY ubiquity.playpen.CurrentParse "Current parse:">
+<!ENTITY ubiquity.playpen.AvgTimingResults "ms (avg: <span class='avg'></span> ms)">
+<!ENTITY ubiquity.playpen.ParseTree "Current query's parse tree:">
 <!-- Desktop QuickLaunch chrome/content/desktop-quicklaunch.xhtml -->
-<!ENTITY ubiquity.quicklaunch.Header "Inici ràpid des de l'escriptori">
-<!ENTITY ubiquity.quicklaunch.ShortDesc "<strong>L'inici ràpid des de l'escriptori</strong> és una característica molt experimental que permet cridar a l'&appTitle; des de fora de l'ordinador, arreu del vostre ordinador.">
-<!ENTITY ubiquity.quicklaunch.LongDesc1 "Ara mateix aquesta característica només funciona al Mac OS X, però planegem fer-la disponible en altres plataformes en un futur.">
-<!ENTITY ubiquity.quicklaunch.LongDesc2 "Per a habilitar l'inici ràpid des de l'escriptori, cliqueu al botó a continuació. Una vegada l'habiliteu, podeu prémer opció+espai per a invocar l'Ubiquity arreu des del vostre ordinador.">
+<!ENTITY ubiquity.quicklaunch.Header "Desktop QuickLaunch">
+<!ENTITY ubiquity.quicklaunch.ShortDesc "<strong>Desktop QuickLaunch</strong> is a very experimental feature which allows &appTitle; to be summoned outside of the browser for use anywhere on your computer.">
+<!ENTITY ubiquity.quicklaunch.LongDesc1 "Right now this feature is only supported on OS X, but we do plan to make it available on other platforms in the future.">
+<!ENTITY ubiquity.quicklaunch.LongDesc2 "To enable Desktop QuickLaunch, click the button below. Once you've enabled it, you can press option+space to invoke Ubiquity anywhere on your computer.">
 <!-- Test Suite chrome/content/desktop-quicklaunch.xhtml -->
-<!ENTITY ubiquity.testsuite.ShowSuccess "Mostra els tests amb èxit">
-<!ENTITY ubiquity.testsuite.ShowSkipped "Mostra els tests omesos">
-<!ENTITY ubiquity.testsuite.ShowFailed "Mostra els tests fallats">
-<!ENTITY ubiquity.testsuite.TestsRunning "S'estan executant els tests…">
+<!ENTITY ubiquity.testsuite.ShowSuccess "Show successful tests">
+<!ENTITY ubiquity.testsuite.ShowSkipped "Show skipped tests">
+<!ENTITY ubiquity.testsuite.ShowFailed "Show failed tests">
+<!ENTITY ubiquity.testsuite.TestsRunning "Tests are running...">
 <!-- Test Suite chrome/content/tuner.xhtml -->
-<!ENTITY ubiquity.tuner.Header "Afinament dels tipus de nom de l'&appTitle;">
-<!ENTITY ubiquity.tuner.ShortDesc "L'afinador us permet provar les diferents entrades respecte als tipus de nom actius i verificar-ne llur suggeriments. És especialment útil per als desenvolupadors per tal de fer-se una idea de com ajustar les puntuacions dels suggeriments dels tipus de nom. <strong>NOTA: l'afinador de tipus de nom neteja <code>la memòria cau dels noms</code> per cada execució.</strong>">
-<!ENTITY ubiquity.tuner.OptionMaxSuggs "màxim de suggeriments per tipus de nom:">
-<!ENTITY ubiquity.tuner.OptionParserTip "utilitza el mateix analitzador que la instància actual de l'&appTitle;">
-<!ENTITY ubiquity.tuner.OptionGSync "sincronitza amb el <code>gUbiquity</code>">
-<!ENTITY ubiquity.tuner.HeaderSuggestions "Suggeriments">
-<!ENTITY ubiquity.tuner.THeadNounType "tipus de nom">
-<!ENTITY ubiquity.tuner.THeadSuggestion "suggeriment">
+<!ENTITY ubiquity.tuner.Header "&appTitle; Nountype Tuner">
+<!ENTITY ubiquity.tuner.ShortDesc "This tuner allows you to test different inputs against the active nountypes and verify their suggestions. It is particularly helpful for developers to get a sense for how to tweak their nountype suggestions' scores. <strong>NOTE: the nountype tuner clears the <code>nounCache</code> on each run.</strong>">
+<!ENTITY ubiquity.tuner.OptionMaxSuggs "max suggestions per nountype:">
+<!ENTITY ubiquity.tuner.OptionParserTip "uses the same parser as the current &appTitle; instance">
+<!ENTITY ubiquity.tuner.OptionGSync "sync with <code>gUbiquity</code>">
+<!ENTITY ubiquity.tuner.HeaderSuggestions "Suggestions">
+<!ENTITY ubiquity.tuner.THeadNounType "nountype">
+<!ENTITY ubiquity.tuner.THeadSuggestion "suggestion">
