--- a/ubiquity/chrome/locale/de/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/de/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Kommandos
 ubiquity.nav.getnewcommands=Neue Kommandos holen
 ubiquity.nav.support=Hilfe
 ubiquity.nav.hackubiquity=Hack Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 # /chrome/content/localization-template.js
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Verstecke Hilfe
 
 # chrome://ubiquity/content/settings.xhtml
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # could read "Dein Modifikator muss einen SHIFT, CTRL, ALT oder META key inkludieren."
 
-ubiquity.prefkeys.notifybadmodifier=Du benötigst einen Modifikator wie SHIFT, CTRL, ALT oder META.
-ubiquity.prefkeys.clickhere=Klicke hier um zu ändern
-ubiquity.prefkeys.confirmchange=Deine Taste wurde in %S geändert.
 # Key Combo Input for settings.xhtml (one-liner input focus)
 
-ubiquity.prefkeys.pressyourcombo=Drücke deine Tastenkombination...
 ############################
 
 # /chrome/content/cmdlist.js
 
+ubiquity.prefkeys.notifybadmodifier=Du benötigst einen Modifikator wie SHIFT, CTRL, ALT oder META.
+ubiquity.prefkeys.clickhere=Klicke hier um zu ändern
+ubiquity.prefkeys.confirmchange=Deine Taste wurde in %S geändert.
 # chrome://ubiquity/content/cmdlist.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Drücke deine Tastenkombination...
+############################
+
+# /chrome/content/confirm-add-js.js
+
+# chrome://ubiquity/content/confirm-add-command.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=deinstallieren
 ubiquity.cmdlist.feedupdated=Ein Update für dieses Kommando ist verfügbar.
@@ -66,9 +75,9 @@ ubiquity.cmdlist.resubscribe=wieder installieren
 ubiquity.cmdlist.purge=entfernen
 ############################
 
-# /chrome/content/confirm-add-js.js
+# /chrome/content/settings.js
 
-# chrome://ubiquity/content/confirm-add-command.xhtml
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.subscription.successtitle=Ubiquity Kommando Installation Erfolgreich
 ubiquity.subscription.successheader=Installation Erfolgreich
