--- a/ubiquity/chrome/locale/es-ES/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/es-ES/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Sus órdenes
 ubiquity.nav.getnewcommands=Obtener nuevas órdenes
 ubiquity.nav.support=Soporte
 ubiquity.nav.hackubiquity=Hackear Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Ocultar ayuda
 
 # confirm-add-js.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=Debe tener un modificador como SHIFT, CTRL, ALT or META.
-ubiquity.prefkeys.clickhere=Haga click aquí para cambiar
-ubiquity.prefkeys.confirmchange=Su tecla ha sido cambiada a
 ############################
 
-ubiquity.prefkeys.pressyourcombo=Presione su combinación
 ############################
 
 # localization-template.js
 
+ubiquity.prefkeys.notifybadmodifier=Debe tener un modificador como SHIFT, CTRL, ALT or META.
+ubiquity.prefkeys.clickhere=Haga click aquí para cambiar
+ubiquity.prefkeys.confirmchange=Su tecla ha sido cambiada a
 # chrome://ubiquity/content/localization-template.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Presione su combinación
+#
+
+# cmdlist.js
+
+# chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=unsubscribe
 ubiquity.cmdlist.feedupdated=An update for this feed is available.
@@ -66,17 +75,17 @@ ubiquity.cmdlist.resubscribe=resubscribe
 ubiquity.cmdlist.purge=purge
 #
 
-# cmdlist.js
-
-# chrome://ubiquity/content/cmdlist.xhtml
-
-ubiquity.subscription.successtitle=Éxito al subscribirse al sindicador de órdenes
-ubiquity.subscription.successheader=Subscripción exitosa
-#
-
 # the "show/hide help" messages.
 
 ############################
+
+ubiquity.subscription.successtitle=Éxito al subscribirse al sindicador de órdenes
+ubiquity.subscription.successheader=Subscripción exitosa
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=This change will take effect when you restart Firefox.
 ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
