--- a/ubiquity/chrome/locale/es-ES/coreubiquity.properties
+++ b/ubiquity/chrome/locale/es-ES/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Escriba el nombre de la orden y pulse intro para
 
 #
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Busca %S para sus palabras
 ubiquity.cmdutils.searchcmd=Busca %S para: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Ejecuta la miniaplicación <strong>%S</strong>.
 #
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Ejecuta la miniaplicación <strong>%S</strong>
 ubiquity.feedmanager.didyouknow=¿Sabe que tiene una orden de Ubiquity para esta web?
 ubiquity.feedmanager.showme=¡Enséñamela!
 ubiquity.feedmanager.dontremind=No me lo recuerdes otra vez para esta web.
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=Esta página contiene órdenes de Ubiquity. Si desea suscribirse a ellas, por favor pulse el botón de la derecha.
 ubiquity.feedmanager.subscribe=Suscribirse...
 #
