--- a/ubiquity/chrome/locale/fi-FI/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/fi-FI/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Komentosi
 ubiquity.nav.getnewcommands=Hae lisää komentoja
 ubiquity.nav.support=Tuki
 ubiquity.nav.hackubiquity=Muokkaa Ubiquitya
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Piilota ohje
 
 # confirm-add-js.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=Määritteen tulee sisältää seuraavista näppäimistä ainakin yhden: SHIFT, CTRL, ALT tai META.
-ubiquity.prefkeys.clickhere=Napsauta muuttaksesi
-ubiquity.prefkeys.confirmchange=Pikanäppäin on vaihdettu yhdistelmään
 ############################
 
-ubiquity.prefkeys.pressyourcombo=Paina yhdistelmäsi...
 ############################
 
 # localization-template.js
 
+ubiquity.prefkeys.notifybadmodifier=Määritteen tulee sisältää seuraavista näppäimistä ainakin yhden: SHIFT, CTRL, ALT tai META.
+ubiquity.prefkeys.clickhere=Napsauta muuttaksesi
+ubiquity.prefkeys.confirmchange=Pikanäppäin on vaihdettu yhdistelmään
 # chrome://ubiquity/content/localization-template.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Paina yhdistelmäsi...
+#
+
+# cmdlist.js
+
+# chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=lopeta tilaus
 ubiquity.cmdlist.feedupdated=Syötteelle on saatavilla päivitys.
@@ -66,17 +75,17 @@ ubiquity.cmdlist.resubscribe=tilaa uudestaan
 ubiquity.cmdlist.purge=puhdista
 #
 
-# cmdlist.js
-
-# chrome://ubiquity/content/cmdlist.xhtml
-
-ubiquity.subscription.successtitle=Ubiquityn komentosyötteen tilaaminen onnistui
-ubiquity.subscription.successheader=Tilaaminen onnistui
-#
-
 # the "show/hide help" messages.
 
 ############################
+
+ubiquity.subscription.successtitle=Ubiquityn komentosyötteen tilaaminen onnistui
+ubiquity.subscription.successheader=Tilaaminen onnistui
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Tämä muutos tulee voimaan, kun käynnistät Firefoxin uudestaan.
 ubiquity.settings.opennewwindows=Tämä muutos tulee voimaan, kun avaat uusia ikkunoita.
