--- a/ubiquity/chrome/locale/fr/coreubiquity.properties
+++ b/ubiquity/chrome/locale/fr/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Saisissez le nom de la commande et appuyez sur E
 
 #
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Recherche %S pour vos mots.
 ubiquity.cmdutils.searchcmd=Recherche %S pour : <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Exécute le marque-page scripté <strong>%S</strong>.
 #
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Exécute le marque-page scripté <strong>%S</s
 ubiquity.feedmanager.didyouknow=Savez-vous qu'il existe une commande Ubiquity pour ce site Web ?
 ubiquity.feedmanager.showme=Montrez-la-moi !
 ubiquity.feedmanager.dontremind=Ne plus me le signaler pour ce site Web
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=Cette page contient des commandes Ubiquity. Si vous souhaitez vous y abonner, merci de cliquer sur le bouton de droite.
 ubiquity.feedmanager.subscribe=S'abonner…
 #
