--- a/ubiquity/chrome/locale/hu/coreubiquity.properties
+++ b/ubiquity/chrome/locale/hu/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to ex
 
 #
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Searches %S for your words.
 ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
 #
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
 ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
 ubiquity.feedmanager.showme=Show me!
 ubiquity.feedmanager.dontremind=Don't remind me again for this website
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
 ubiquity.feedmanager.subscribe=Subscribe...
 #
