--- a/ubiquity/chrome/locale/it-IT/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/it-IT/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Comandi disponibili
 ubiquity.nav.getnewcommands=Ottieni nuovi comandi
 ubiquity.nav.support=Guida
 ubiquity.nav.hackubiquity=Hack Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 #
 
 #
@@ -30,6 +31,14 @@ ubiquity.showhidehelp.show=Mostra aiuto
 ubiquity.showhidehelp.hide=Nascondi aiuto
 #
 
+#
+
+#
+
+#
+
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 #
 
 #
@@ -72,11 +81,11 @@ ubiquity.cmdlist.purge=Purga
 
 ubiquity.subscription.successtitle=Iscrizione al feed eseguita con successo.
 ubiquity.subscription.successheader=Iscrizione avvenuta
-#
+############################
 
-#
+# /chrome/content/settings.js
 
-#
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Questa modifica avrà effetto solo dopo aver riavviato Firefox.
 ubiquity.settings.opennewwindows=Questa modifica avrà effetto all'apertura di una nuova finestra.
