--- a/ubiquity/chrome/locale/ja/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ja/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=コマンドリスト
 ubiquity.nav.getnewcommands=コマンドを探す
 ubiquity.nav.support=サポート
 ubiquity.nav.hackubiquity=ハッキング
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=ヘルプを隠す
 
 # settings.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/settings.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=SHIFT または CTRL, ALT, META の修飾キーと組み合わせてください。
-ubiquity.prefkeys.clickhere=ここをクリックして変更
-ubiquity.prefkeys.confirmchange=Ubiquity を呼び出すキーが変更されました:
 ############################
 
-ubiquity.prefkeys.pressyourcombo=キーの組み合わせを入力してください...
 ############################
 
 # confirm-add-js.js
 
+ubiquity.prefkeys.notifybadmodifier=SHIFT または CTRL, ALT, META の修飾キーと組み合わせてください。
+ubiquity.prefkeys.clickhere=ここをクリックして変更
+ubiquity.prefkeys.confirmchange=Ubiquity を呼び出すキーが変更されました:
 # chrome://ubiquity/content/confirm-add-command.xhtml
+
+ubiquity.prefkeys.pressyourcombo=キーの組み合わせを入力してください...
+############################
+
+############################
+
+# localization-template.js
 
 ubiquity.cmdlist.unsubscribefeed=利用停止
 ubiquity.cmdlist.feedupdated=新しいバージョンがリリースされています。
@@ -64,19 +73,19 @@ ubiquity.cmdlist.viewmoreinfo=詳細情報: %S
 ubiquity.cmdlist.oldparsertitle=このコマンドは Parser 2 と互換性がないため読み込まれません。
 ubiquity.cmdlist.resubscribe=利用再開
 ubiquity.cmdlist.purge=削除
-############################
-
-############################
-
-# localization-template.js
-
-ubiquity.subscription.successtitle=インストール完了 - Ubiquity
-ubiquity.subscription.successheader=インストール完了
 # chrome://ubiquity/content/localization-template.xhtml
 
 #
 
 # cmdlist.js
+
+ubiquity.subscription.successtitle=インストール完了 - Ubiquity
+ubiquity.subscription.successheader=インストール完了
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=変更は Firefox の再起動後に適用されます。
 ubiquity.settings.opennewwindows=変更は新しいウィンドウを開くと適用されます。
