--- a/ubiquity/chrome/locale/pl-PL/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/pl-PL/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Twoje polecenia
 ubiquity.nav.getnewcommands=Pobierz nowe polecenia
 ubiquity.nav.support=Wsparcie techniczne
 ubiquity.nav.hackubiquity=Modyfikuj Ubiquity
+ubiquity.nav.githubpastename=Wklejanie do gist.github.com z następującą nazwą:
 ############################
 
 # /chrome/content/localization-template.js
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Ukryj pomoc
 
 # chrome://ubiquity/content/settings.xhtml
 
+ubiquity.editor.savelogmsgp1=Źródło polecenia zostało zapisane w %S i automatycznie dokonano jego subskrypcji na twoją rzecz. Wszystkie zapisane zmiany będą zastosowane w momencie przywołania Ubiquity.
+ubiquity.editor.savelogmsgp2=Możesz zobaczyć i usunąć tę subskrypcję z poziomu swojej <a href='about:ubiquity?cmdlist'>Listy poleceń</a>.
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 
-ubiquity.prefkeys.notifybadmodifier=Musisz mieć modyfikator np. Shift, Ctrl, Alt lub Meta.
-ubiquity.prefkeys.clickhere=Kliknij tutaj, aby zmienić skrót
-ubiquity.prefkeys.confirmchange=Skrót został zmieniony na
 # Key Combo Input for settings.xhtml (one-liner input focus)
 
-ubiquity.prefkeys.pressyourcombo=Naciśnij swoją kombinację klawiszy…
 ############################
 
 # /chrome/content/cmdlist.js
 
+ubiquity.prefkeys.notifybadmodifier=Musisz mieć modyfikator np. Shift, Ctrl, Alt lub Meta.
+ubiquity.prefkeys.clickhere=Kliknij tutaj, aby zmienić skrót
+ubiquity.prefkeys.confirmchange=Skrót został zmieniony na
 # chrome://ubiquity/content/cmdlist.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Naciśnij swoją kombinację klawiszy…
+############################
+
+# /chrome/content/confirm-add-js.js
+
+# chrome://ubiquity/content/confirm-add-command.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=anuluj subskrypcję
 ubiquity.cmdlist.feedupdated=Jest dostępna aktualizacja dla tego kanału.
@@ -66,18 +75,12 @@ ubiquity.cmdlist.resubscribe=subskrybuj ponownie
 ubiquity.cmdlist.purge=wyczyść
 ############################
 
-# /chrome/content/confirm-add-js.js
-
-# chrome://ubiquity/content/confirm-add-command.xhtml
-
-ubiquity.subscription.successtitle=Dokonano subskrypcji kanału poleceń Ubiquity
-ubiquity.subscription.successheader=Dokonano subskrypcji
-############################
-
 # /chrome/content/settings.js
 
 # chrome://ubiquity/content/settings.xhtml
 
+ubiquity.subscription.successtitle=Dokonano subskrypcji kanału poleceń Ubiquity
+ubiquity.subscription.successheader=Dokonano subskrypcji
 ubiquity.settings.restartfirefox=Zmiana zostanie zastosowana po ponownym uruchomieniu Firefoksa.
 ubiquity.settings.opennewwindows=miana zostanie zastosowana po otwarciu nowego okna.
 ubiquity.settings.skinsaved=Twój motyw został zapisany!
