--- a/ubiquity/chrome/locale/pl-PL/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pl-PL/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Wprowadź nazwę polecenia i naciśnij [Enter], 
 
 # /modules/cmdutils.js
 
+ubiquity.cmdutils.noactiondef=Nie zdefiniowano działania.
+ubiquity.cmdutils.previewdefault=Wykonuje polecenie %S.
 ubiquity.cmdutils.searchdescription=Przeszukuje %S w poszukiwaniu Twoich słów.
 ubiquity.cmdutils.searchcmd=Przeszukuje %S w poszukiwaniu: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Wczytywanie wyników…
+ubiquity.cmdutils.searchparserror=Błąd podczas przetwarzania wyników szukania.
+ubiquity.cmdutils.parsedresultsfound=Wyniki dla %S:
+ubiquity.cmdutils.parsedresultsnotfound=Nie ma wyników dla %S.
 ubiquity.cmdutils.bookmarkletexec=Wykonuje skryptozakładkę <strong>%S</strong>
 ############################
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Wykonuje skryptozakładkę <strong>%S</strong>
 ubiquity.feedmanager.didyouknow=Czy na pewno masz polecenie Ubiquity dla tej witryny?
 ubiquity.feedmanager.showme=Pokaż!
 ubiquity.feedmanager.dontremind=Nie przypominaj mi o tej witrynie
+ubiquity.feedmanager.neverremind=Nigdy mi nie przypominaj
 ubiquity.feedmanager.newcommandfound=Ta strona zawiera polecenia Ubiquity. Jeśli chcesz je subskrybować, naciśnij przycisk po prawej stronie.
 ubiquity.feedmanager.subscribe=Subskrybuj…
 ############################
@@ -38,4 +45,4 @@ ubiquity.skinsvc.skinchanged=Motyw został zmieniony!
 # /modules/stylish_feed_plugin.js
 
 ubiquity.stylishfeedplug.newuserstylefound=Ta strona zawiera styl Stylish, który może być uruchomiony przez Ubiquity. Jeśli chcesz je subskrybować, naciśnij przycisk po prawej stronie.
-ubiquity.stylishfeedplug.subscriptionsuccess=Styl został zasubskrybowany!
+ubiquity.stylishfeedplug.subscriptionsuccess=Dokonano subskrypcji stylu!
