--- a/ubiquity/chrome/locale/pt-BR/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/pt-BR/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Seus comandos
 ubiquity.nav.getnewcommands=Obter novos comandos
 ubiquity.nav.support=Suporte
 ubiquity.nav.hackubiquity=Criar comandos
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Ocultar ajuda
 
 # confirm-add-js.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=Você deve configurar uma tecla modificadora como Shift, Ctrl, Alt ou Meta.
-ubiquity.prefkeys.clickhere=Clique aqui para alterar
-ubiquity.prefkeys.confirmchange=Sua tecla foi alterada para %S.
 ############################
 
-ubiquity.prefkeys.pressyourcombo=Pressione sua combinação…
 ############################
 
 # localization-template.js
 
+ubiquity.prefkeys.notifybadmodifier=Você deve configurar uma tecla modificadora como Shift, Ctrl, Alt ou Meta.
+ubiquity.prefkeys.clickhere=Clique aqui para alterar
+ubiquity.prefkeys.confirmchange=Sua tecla foi alterada para %S.
 # chrome://ubiquity/content/localization-template.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Pressione sua combinação…
+#
+
+# cmdlist.js
+
+# chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=desinscrever
 ubiquity.cmdlist.feedupdated=Uma atualização deste repositório está disponível.
@@ -66,17 +75,17 @@ ubiquity.cmdlist.resubscribe=reinscrever-se
 ubiquity.cmdlist.purge=banir
 #
 
-# cmdlist.js
-
-# chrome://ubiquity/content/cmdlist.xhtml
-
-ubiquity.subscription.successtitle=Inscrição do Feed de comandos do Ubiquity concluída com sucesso!
-ubiquity.subscription.successheader=Inscrição concluída com sucesso!
-#
-
 # the "show/hide help" messages.
 
 ############################
+
+ubiquity.subscription.successtitle=Inscrição do Feed de comandos do Ubiquity concluída com sucesso!
+ubiquity.subscription.successheader=Inscrição concluída com sucesso!
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Essa alteração terá efeito após você reiniciar o Firefox.
 ubiquity.settings.opennewwindows=Essa alteração terá efeito ao abrir novas janelas.
