--- a/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Digite o nome de um comando e pressione Enter pa
 
 #
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Procura seus termos em %S.
 ubiquity.cmdutils.searchcmd=Procura em %S <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Executa o bookmarklet <strong>%S</strong>.
 #
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Executa o bookmarklet <strong>%S</strong>.
 ubiquity.feedmanager.didyouknow=Você sabia que existe um comando Ubiquity para este site?
 ubiquity.feedmanager.showme=Mostre-me!
 ubiquity.feedmanager.dontremind=Não lembrar novamente sobre este site
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=Esta página contém comandos Ubiquity. Se você quiser adicioná-los, clique no botão à direita.
 ubiquity.feedmanager.subscribe=Inscrever-se…
 #
