--- a/ubiquity/chrome/locale/pt-PT/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Escreva o nome de um comando e carregue enter pa
 
 #
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Pesquisa %S pelas suas palavras.
 ubiquity.cmdutils.searchcmd=Pesquisa %S por: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Executa o bookmarklet <strong>%S</strong>.
 #
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Executa o bookmarklet <strong>%S</strong>.
 ubiquity.feedmanager.didyouknow=Sabia que o Ubiquity tem um comando para este website?
 ubiquity.feedmanager.showme=Mostrar!
 ubiquity.feedmanager.dontremind=Não me lembrar novamente para este site
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=Esta página contem comandos do Ubiquity. Se deseja subscrevê-los, carregue no botão à direita.
 ubiquity.feedmanager.subscribe=Subscrever...
 #
