--- a/ubiquity/chrome/locale/ru-RU/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Ваши команды
 ubiquity.nav.getnewcommands=Получение новых команд
 ubiquity.nav.support=Поддержка пользователей
 ubiquity.nav.hackubiquity=Изучи Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 #
 
 #
@@ -30,6 +31,14 @@ ubiquity.showhidehelp.show=Показать справку
 ubiquity.showhidehelp.hide=Спрятать справку
 #
 
+#
+
+#
+
+#
+
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 #
 
 #
@@ -72,11 +81,11 @@ ubiquity.cmdlist.purge=очистить
 
 ubiquity.subscription.successtitle=Подписка к каналу команд Ubiquity успешно завершена
 ubiquity.subscription.successheader=Успешная подписка
-#
+############################
 
-#
+# /chrome/content/settings.js
 
-#
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Это изменение будет применено только после перезапуска Firefox.
 ubiquity.settings.opennewwindows=Это изменение будет применено только после открытия нового окна.
