--- a/ubiquity/chrome/locale/zh-CN/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/zh-CN/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=你的命令
 ubiquity.nav.getnewcommands=获取新命令
 ubiquity.nav.support=支持
 ubiquity.nav.hackubiquity=Hack Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=隐藏帮助
 
 # settings.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/settings.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=你必须有一个辅助键 SHIFT CTRL ALT 或 META。
-ubiquity.prefkeys.clickhere=点击此处更改
-ubiquity.prefkeys.confirmchange=你的按键已更改为 %S。
 ############################
 
-ubiquity.prefkeys.pressyourcombo=按下您的组合键...
 ############################
 
 # confirm-add-js.js
 
+ubiquity.prefkeys.notifybadmodifier=你必须有一个辅助键 SHIFT CTRL ALT 或 META。
+ubiquity.prefkeys.clickhere=点击此处更改
+ubiquity.prefkeys.confirmchange=你的按键已更改为 %S。
 # chrome://ubiquity/content/confirm-add-command.xhtml
+
+ubiquity.prefkeys.pressyourcombo=按下您的组合键...
+############################
+
+############################
+
+# localization-template.js
 
 ubiquity.cmdlist.unsubscribefeed=取消订阅
 ubiquity.cmdlist.feedupdated=此命令来源有更新。
@@ -64,19 +73,19 @@ ubiquity.cmdlist.viewmoreinfo=在 %S 查看详细信息
 ubiquity.cmdlist.oldparsertitle=此命令没有被加载，因为它不兼容第二代解析器。
 ubiquity.cmdlist.resubscribe=重新订阅
 ubiquity.cmdlist.purge=清除
-############################
-
-############################
-
-# localization-template.js
-
-ubiquity.subscription.successtitle=Ubiquity 命令收取点订阅成功
-ubiquity.subscription.successheader=订阅成功
 # chrome://ubiquity/content/localization-template.xhtml
 
 #
 
 # cmdlist.js
+
+ubiquity.subscription.successtitle=Ubiquity 命令收取点订阅成功
+ubiquity.subscription.successheader=订阅成功
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=这个改变将在重新启动 Firefox 后生效。
 ubiquity.settings.opennewwindows=这个改变将在你打开的新窗口生效。
