--- a/ubiquity/chrome/locale/zh-TW/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/zh-TW/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=你的命令
 ubiquity.nav.getnewcommands=取得新命令
 ubiquity.nav.support=線上支援
 ubiquity.nav.hackubiquity=Hack Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 # /chrome/content/localization-template.js
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=隱藏說明
 
 # chrome://ubiquity/content/settings.xhtml
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 
-ubiquity.prefkeys.notifybadmodifier=你必須使用至少一個如 Shift、Ctrl、Alt、或 Meta 的組合鍵。
-ubiquity.prefkeys.clickhere=點選此處來變更
-ubiquity.prefkeys.confirmchange=你的按鍵組合已變更為 %S。
 # Key Combo Input for settings.xhtml (one-liner input focus)
 
-ubiquity.prefkeys.pressyourcombo=按下你的按鍵組合...
 ############################
 
 # /chrome/content/cmdlist.js
 
+ubiquity.prefkeys.notifybadmodifier=你必須使用至少一個如 Shift、Ctrl、Alt、或 Meta 的組合鍵。
+ubiquity.prefkeys.clickhere=點選此處來變更
+ubiquity.prefkeys.confirmchange=你的按鍵組合已變更為 %S。
 # chrome://ubiquity/content/cmdlist.xhtml
+
+ubiquity.prefkeys.pressyourcombo=按下你的按鍵組合...
+############################
+
+# /chrome/content/confirm-add-js.js
+
+# chrome://ubiquity/content/confirm-add-command.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=取消訂閱
 ubiquity.cmdlist.feedupdated=此命令來源有更新。
@@ -66,9 +75,9 @@ ubiquity.cmdlist.resubscribe=重新訂閱
 ubiquity.cmdlist.purge=清除
 ############################
 
-# /chrome/content/confirm-add-js.js
+# /chrome/content/settings.js
 
-# chrome://ubiquity/content/confirm-add-command.xhtml
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.subscription.successtitle=Ubiquity 命令來源訂閱成功
 ubiquity.subscription.successheader=訂閱成功
