--- a/ubiquity/chrome/locale/ca/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ca/aboutubiquity.properties
@@ -1,88 +1,97 @@
-#
+############################
+
+# /chrome/content/headers.js
+
+# Used in all about:ubiquity headers.
+
+ubiquity.nav.main=Tutorial
+ubiquity.nav.settings=Settings
+ubiquity.nav.commands=Your Commands
+ubiquity.nav.getnewcommands=Get New Commands
+ubiquity.nav.support=Support
+ubiquity.nav.hackubiquity=Hack Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
+############################
+
+# /chrome/content/localization-template.js
+
+# /chrome/content/cmdlist.js
 
 #
 
-#
+# chrome://ubiquity/content/localization-template.xhtml
 
-ubiquity.nav.main=Guia d'aprenentatge
-ubiquity.nav.settings=Configuració
-ubiquity.nav.commands=Les vostres ordres
-ubiquity.nav.getnewcommands=Obtingueu noves ordres
-ubiquity.nav.support=Assistència
-ubiquity.nav.hackubiquity=Remeneu l'Ubiquity
-#
+# chrome://ubiquity/content/cmdlist.xhtml
 
 #
 
-#
+# the "show/hide help" messages.
 
-#
+ubiquity.showhidehelp.show=Show Help
+ubiquity.showhidehelp.hide=Hide Help
+# end global properties, begin by file name.
 
-#
+############################
 
-#
+# /chrome/content/editor.js
 
-#
+# chrome://ubiquity/content/editor.xhtml
 
-#
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
+############################
 
-ubiquity.showhidehelp.show=Mostra l'ajuda
-ubiquity.showhidehelp.hide=Amaga l'ajuda
-#
+# /chrome/content/prefkeys.js
 
-#
+# chrome://ubiquity/content/settings.xhtml
 
-#
+# could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 
-#
+ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
+ubiquity.prefkeys.clickhere=Click here to change
+ubiquity.prefkeys.confirmchange=Your key has been changed to %S.
+# Key Combo Input for settings.xhtml (one-liner input focus)
 
-#
+ubiquity.prefkeys.pressyourcombo=Press your combination...
+############################
 
-ubiquity.prefkeys.notifybadmodifier=Heu de tenir un modificador com ara Maj, Ctrl, Alt o Meta.
-ubiquity.prefkeys.clickhere=Feu clic aquí per a canviar-ho.
-ubiquity.prefkeys.confirmchange=S'ha canviat la vostra tecla a %S.
-#
+# /chrome/content/cmdlist.js
 
-ubiquity.prefkeys.pressyourcombo=Premeu la vostra combinació.
-#
+# chrome://ubiquity/content/cmdlist.xhtml
 
-#
+ubiquity.cmdlist.unsubscribefeed=unsubscribe
+ubiquity.cmdlist.feedupdated=An update for this feed is available.
+ubiquity.cmdlist.viewsource=view source
+ubiquity.cmdlist.viewfeedsource=view auto-updated source
+ubiquity.cmdlist.localetemplate=get localization template
+ubiquity.cmdlist.synonyms=also called %S
+ubiquity.cmdlist.createdby=by %S
+ubiquity.cmdlist.license=licensed as %S
+ubiquity.cmdlist.contributions=contributions by %S
+ubiquity.cmdlist.homepage=homepage
+ubiquity.cmdlist.viewmoreinfo=view more information at %S
+ubiquity.cmdlist.oldparsertitle=This command was not loaded as it is incompatible with Parser 2.
+ubiquity.cmdlist.resubscribe=resubscribe
+ubiquity.cmdlist.purge=purge
+############################
 
-#
+# /chrome/content/confirm-add-js.js
 
-ubiquity.cmdlist.unsubscribefeed=finalitza la subscripció
-ubiquity.cmdlist.feedupdated=Hi ha una actualització disponible del canal
-ubiquity.cmdlist.viewsource=visualitza el codi
-ubiquity.cmdlist.viewfeedsource=visualitza el codi actualitzat automàticament
-ubiquity.cmdlist.localetemplate=aconsegueix la plantilla de localització
-ubiquity.cmdlist.synonyms=també anomenada %S
-ubiquity.cmdlist.createdby=per %S
-ubiquity.cmdlist.license=amb llicència %S
-ubiquity.cmdlist.contributions=amb la col·laboració de %S
-ubiquity.cmdlist.homepage=pàgina d'inici
-ubiquity.cmdlist.viewmoreinfo=més informació a %S
-ubiquity.cmdlist.oldparsertitle=No s'ha carregat l'ordre perquè no és compatible amb el Parser 2.
-ubiquity.cmdlist.resubscribe=torna a subscriure-m'hi
-ubiquity.cmdlist.purge=purga
-#
+# chrome://ubiquity/content/confirm-add-command.xhtml
 
-#
+ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
+ubiquity.subscription.successheader=Subscription Successful
+############################
 
-#
+# /chrome/content/settings.js
 
-ubiquity.subscription.successtitle=La subscripció al canal de l'ordre de l'Ubiquity s'ha realitzat amb èxit
-ubiquity.subscription.successheader=La subscripció s'ha realitzat amb èxit
-#
+# chrome://ubiquity/content/settings.xhtml
 
-#
-
-#
-
-ubiquity.settings.restartfirefox=El canvi tindrà efecte quan reinicieu el Firefox.
-ubiquity.settings.opennewwindows=El canvi tindrà efecte quan obriu finestres noves.
-ubiquity.settings.skinsaved=S'ha desat la vostra aparença!
-ubiquity.settings.skinerror=S'ha produït un error en desar la vostra aparença.
-ubiquity.settings.skinauthor=creada per %S
-ubiquity.settings.skinlicense=llicenciada com %S
-ubiquity.settings.viewskinsource=visualitza el codi
-ubiquity.settings.uninstallskin=desinstal·la
+ubiquity.settings.restartfirefox=This change will take effect when you restart Firefox.
+ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
+ubiquity.settings.skinsaved=Your skin has been saved!
+ubiquity.settings.skinerror=Error saving your skin.
+ubiquity.settings.skinauthor=created by %S
+ubiquity.settings.skinlicense=licensed as %S
+ubiquity.settings.viewskinsource=view source
+ubiquity.settings.uninstallskin=uninstall
