--- a/ubiquity/chrome/locale/ca/coreubiquity.dtd
+++ b/ubiquity/chrome/locale/ca/coreubiquity.dtd
@@ -1,2 +1,2 @@
 <!-- chrome/content/browser.xul -->
-<!ENTITY ubiquity.toolbar.tooltip "Obre l'Ubiquity">
+<!ENTITY ubiquity.toolbar.tooltip "Open Ubiquity">
