--- a/ubiquity/chrome/locale/ca/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ca/coreubiquity.properties
@@ -1,41 +1,48 @@
-extensions.ubiquity@labs.mozilla.com.description=Una extensió que us permet utilitzar ordres dinàmiques en el Firefox.
-#
+extensions.ubiquity@labs.mozilla.com.description=An extension that allows for the use of dynamic commands in Firefox.
+############################
 
-#
+# /modules/cmdmanager.js
 
-ubiquity.cmdmanager.defaulthelp=Escriviu el nom d'una ordre i premeu Retorn per a executar-la, o bé <strong>ajuda</strong> per a assistència.
-#
+ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
+############################
 
-#
+# /modules/cmdutils.js
 
-ubiquity.cmdutils.searchdescription=Cerca a %S les vostres paraules.
-ubiquity.cmdutils.searchcmd=Cerca a %S: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executa el bookmarklet <strong>%S</strong>.
-#
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
+ubiquity.cmdutils.searchdescription=Searches %S for your words.
+ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
+ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
+############################
 
-#
+# /modules/feedaggregator.js
 
-ubiquity.feedmanager.didyouknow=Sabíeu que teniu una ordre de l'Ubiquity per a aquest lloc web?
-ubiquity.feedmanager.showme=Mostreu-me-la!
-ubiquity.feedmanager.dontremind=No m'ho torneu a recordar per a aquest lloc web
-ubiquity.feedmanager.newcommandfound=Aquesta pàgina conté ordres de l'Ubiquity. Si us hi voleu subscriure, cliqueu al botó de la dreta.
-ubiquity.feedmanager.subscribe=Subscriu-m'hi...
-#
+ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
+ubiquity.feedmanager.showme=Show me!
+ubiquity.feedmanager.dontremind=Don't remind me again for this website
+ubiquity.feedmanager.neverremind=Never remind me
+ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
+ubiquity.feedmanager.subscribe=Subscribe...
+############################
 
-#
+# /modules/msgservice.js
 
-ubiquity.msgservice.defaultmsgtitle=Notificació de l'Ubiquity
-#
+ubiquity.msgservice.defaultmsgtitle=Ubiquity Notification
+############################
 
-#
+# /modules/skinsvc.js
 
-ubiquity.skinsvc.saveyourskin=Desa la vostra aparença
-ubiquity.skinsvc.installskin=Instal·la...
-ubiquity.skinsvc.newskinfound=Aquesta pàgina conté una aparença de l'Ubiquity. Si voleu instal·lar-la, cliqueu al botó de la dreta.
-ubiquity.skinsvc.skinchanged=S'ha canviat la vostra aparença!
+ubiquity.skinsvc.saveyourskin=Save Your Skin
+ubiquity.skinsvc.installskin=Install...
+ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
+ubiquity.skinsvc.skinchanged=Your skin has been changed!
 ############################
 
 # /modules/stylish_feed_plugin.js
 
-ubiquity.stylishfeedplug.newuserstylefound=Aquesta pàgina conté un estil d'usuari que l'Ubiquity pot executar. Si voleu subscriure-vos-hi, cliqueu al botó de la dreta.
-ubiquity.stylishfeedplug.subscriptionsuccess=Us heu subscrit a l'estil d'usuari amb èxit!
+ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
+ubiquity.stylishfeedplug.subscriptionsuccess=Successfully subscribed to Userstyle!
