--- a/ubiquity/chrome/locale/ca/devubiquity.properties
+++ b/ubiquity/chrome/locale/ca/devubiquity.properties
@@ -1,63 +1,63 @@
-#
+############################
 
 # chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
 
-ubiquity.quicklaunch.sorrymessage=Ho sentim, però sembla que no feu servir el Mac OS X. Aquesta característica no està habilitada encara.
-ubiquity.quicklaunch.enabledefault=Habilita l'inici ràpid des de l'escriptori
-ubiquity.quicklaunch.enablerunning=L'inici ràpid des de l'escriptori ja està habilitat.
-ubiquity.quicklaunch.enableconfirm=L'inici ràpid des de l'escriptori està ara habilitat.
-ubiquity.quicklaunch.erorr=Ups, s'ha produït un error. Ho sentim!
+ubiquity.quicklaunch.sorrymessage=Sorry, but it appears that you're not using OS X. This feature isn't available yet.
+ubiquity.quicklaunch.enabledefault=Enable Desktop QuickLaunch
+ubiquity.quicklaunch.enablerunning=Desktop QuickLaunch is already enabled.
+ubiquity.quicklaunch.enableconfirm=Desktop QuickLaunch is now enabled.
+ubiquity.quicklaunch.erorr=Ack, an error occurred. Sorry!
 ############################
 
 # chrome://ubiquity/content/playpen.xhtml/js
 
-ubiquity.playpen.caller=crida:
-ubiquity.playpen.combo=combinació:
-ubiquity.playpen.argstring=cadena d'argument:
-ubiquity.playpen.score=puntuació:
-ubiquity.playpen.multiplier=multiplicador:
-ubiquity.playpen.noscore=sense puntuació
-ubiquity.playpen.null=nul
-ubiquity.playpen.done=fet
-ubiquity.playpen.duration=Duració:
-ubiquity.playpen.average=Mitja:
-ubiquity.playpen.step=pas
-ubiquity.playpen.winner=guanyadora
-ubiquity.playpen.role=rol:
-ubiquity.playpen.name=nom:
-ubiquity.playpen.nountype=tipus de nom:
-ubiquity.playpen.step1=pas 1: parteix els mots
-ubiquity.playpen.step2=pas 2: tria els possibles verbs
-ubiquity.playpen.step3=pas 3: tria els possibles cĺítics (per fer)
-ubiquity.playpen.step4=pas 4: agrupa en arguments
-ubiquity.playpen.step5=pas 5: substitució d'anàfores
-ubiquity.playpen.step6=pas 6: substitueix els arguments normalitzats
-ubiquity.playpen.step7=pas 7: aplica els objectes a altres rols amb anàlisis sense verbs
-ubiquity.playpen.step8=pas 8: suggereix verbs
-ubiquity.playpen.step9=pas 9-11: compleció
-ubiquity.playpen.parsespossible=possibles anàlisis
-ubiquity.playpen.parsedverbs=anàlisis amb verbs
-ubiquity.playpen.parsednouns=anàlisis amb suggeriments de noms inclosos, i amb puntuació
+ubiquity.playpen.caller=caller:
+ubiquity.playpen.combo=combination:
+ubiquity.playpen.argstring=argString:
+ubiquity.playpen.score=score:
+ubiquity.playpen.multiplier=multiplier:
+ubiquity.playpen.noscore=no score
+ubiquity.playpen.null=null
+ubiquity.playpen.done=done
+ubiquity.playpen.duration=DURATION:
+ubiquity.playpen.average=AVG:
+ubiquity.playpen.step=step
+ubiquity.playpen.winner=winner
+ubiquity.playpen.role=role:
+ubiquity.playpen.name=name:
+ubiquity.playpen.nountype=nountype:
+ubiquity.playpen.step1=step 1: split words
+ubiquity.playpen.step2=step 2: pick possible verbs
+ubiquity.playpen.step3=step 3: pick possible clitics (TODO)
+ubiquity.playpen.step4=step 4: group into arguments
+ubiquity.playpen.step5=step 5: anaphora substitution
+ubiquity.playpen.step6=step 6: substitute normalized arguments
+ubiquity.playpen.step7=step 7: apply objects to other roles for parses with no verb
+ubiquity.playpen.step8=step 8: suggest verbs
+ubiquity.playpen.step9=step 9-11: completion
+ubiquity.playpen.parsespossible=possible parses
+ubiquity.playpen.parsedverbs=parses with verbs
+ubiquity.playpen.parsednouns=parses with noun suggestions swapped in, and scored
 ############################
 
 # chrome://ubiquity/content/test.xhtml
 
 ubiquity.testsuite.testsingular=test
 ubiquity.testsuite.testplural=tests
-ubiquity.testsuite.runerror=S'ha produït un error executant el conjunt de test: %S
+ubiquity.testsuite.runerror=Error running test suite: %S
 ############################
 
 # chrome://ubiquity/content/tuner.xhtml/js
 
 # reserving these for use later, I has an idea. -L
 
-ubiquity.tuner.ScoringGuess=En termes d'una presumpció:
-ubiquity.tuner.Guess1=Qüestionable.
+ubiquity.tuner.ScoringGuess=In terms of a guess:
+ubiquity.tuner.Guess1=Questionable.
 ubiquity.tuner.Guess2=Possible.
 ubiquity.tuner.Guess3=Probable.
-ubiquity.tuner.Guess4=Perfecta!
-ubiquity.tuner.ScoringMatch=En termes d'una coincidència:
-ubiquity.tuner.Match1=Dolenta.
-ubiquity.tuner.Match2=Acceptable.
-ubiquity.tuner.Match3=Bona.
-ubiquity.tuner.Match4=Exacta!
+ubiquity.tuner.Guess4=Perfect!
+ubiquity.tuner.ScoringMatch=In terms of a match:
+ubiquity.tuner.Match1=Poor.
+ubiquity.tuner.Match2=Okay.
+ubiquity.tuner.Match3=Good.
+ubiquity.tuner.Match4=Exact!
