--- a/ubiquity/chrome/locale/de/coreubiquity.properties
+++ b/ubiquity/chrome/locale/de/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Tippe den Namen eines Kommandos und drücke 'Ent
 
 # /modules/cmdutils.js
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Sucht %S nach deinen Worten.
 ubiquity.cmdutils.searchcmd=Sucht %S für: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Führt das <strong>%S</strong> bookmarklet aus.
 ############################
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Führt das <strong>%S</strong> bookmarklet aus
 ubiquity.feedmanager.didyouknow=Wusstest du, dass es ein Ubiquity Kommando für diese Website gibt?
 ubiquity.feedmanager.showme=Zeig es mir!
 ubiquity.feedmanager.dontremind=Erinnere micht nicht für diese Website
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=Diese Website enthällt ein Ubiquity Kommando. Wenn du es installieren möchtest drücke auf den Knopf weiter rechts.
 ubiquity.feedmanager.subscribe=Installieren...
 ############################
