--- a/ubiquity/chrome/locale/fi-FI/coreubiquity.properties
+++ b/ubiquity/chrome/locale/fi-FI/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Kirjoita komento ja paina Enter suorittaaksesi s
 
 #
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Hakee kohteesta %S hakusanoillasi.
 ubiquity.cmdutils.searchcmd=Hakee kohteesta %S hakusanoilla: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Suorittaa <strong>%S</strong> -kirjanmerkkisovelman.
 #
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Suorittaa <strong>%S</strong> -kirjanmerkkisov
 ubiquity.feedmanager.didyouknow=Tiesitkö, että sinulla on Ubiquity-komentoja tälle sivulle?
 ubiquity.feedmanager.showme=Näytä ne!
 ubiquity.feedmanager.dontremind=Älä muistuta uudelleen tällä sivulla
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=Tämä sivu sisältää Ubiquity-komentoja. Jos haluat tilata ne, napsauta painiketta oikealla.
 ubiquity.feedmanager.subscribe=Tilaa...
 #
