--- a/ubiquity/chrome/locale/fr/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/fr/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Vos commandes
 ubiquity.nav.getnewcommands=Obtenir de nouvelles commandes
 ubiquity.nav.support=Support
 ubiquity.nav.hackubiquity=Hacker Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Masquer l'aide
 
 # confirm-add-js.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=Vous devez utiliser une touche de modification comme MAJ, CTRL, ALT ou META
-ubiquity.prefkeys.clickhere=Cliquer ici pour modifier
-ubiquity.prefkeys.confirmchange=Votre raccourci a été modifié
 ############################
 
-ubiquity.prefkeys.pressyourcombo=Appuyer sur votre combinaison de touches…
 ############################
 
 # localization-template.js
 
+ubiquity.prefkeys.notifybadmodifier=Vous devez utiliser une touche de modification comme MAJ, CTRL, ALT ou META
+ubiquity.prefkeys.clickhere=Cliquer ici pour modifier
+ubiquity.prefkeys.confirmchange=Votre raccourci a été modifié
 # chrome://ubiquity/content/localization-template.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Appuyer sur votre combinaison de touches…
+#
+
+# cmdlist.js
+
+# chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=se désabonner
 ubiquity.cmdlist.feedupdated=Une mise à jour de ce flux est disponible.
@@ -66,17 +75,17 @@ ubiquity.cmdlist.resubscribe=s'abonner à nouveau
 ubiquity.cmdlist.purge=tout vider
 #
 
-# cmdlist.js
-
-# chrome://ubiquity/content/cmdlist.xhtml
-
-ubiquity.subscription.successtitle=Abonnement réussi au flux des commandes d'Ubiquity
-ubiquity.subscription.successheader=Abonnement réussi
-#
-
 # the "show/hide help" messages.
 
 ############################
+
+ubiquity.subscription.successtitle=Abonnement réussi au flux des commandes d'Ubiquity
+ubiquity.subscription.successheader=Abonnement réussi
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Ce changement prendra effet au redémarrage de Firefox.
 ubiquity.settings.opennewwindows=Ce changement prendra effet à l'ouverture de nouvelles fenêtres.
