--- a/ubiquity/chrome/locale/hu/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/hu/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Saját parancsok
 ubiquity.nav.getnewcommands=Új parancsok használata
 ubiquity.nav.support=Támogatás
 ubiquity.nav.hackubiquity=Ubiquity Hack
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Súgó elrejtése
 
 # confirm-add-js.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
-ubiquity.prefkeys.clickhere=Módosításhoz kattintson ide
-ubiquity.prefkeys.confirmchange=Your key has been changed to
 ############################
 
-ubiquity.prefkeys.pressyourcombo=Press your combination...
 ############################
 
 # localization-template.js
 
+ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
+ubiquity.prefkeys.clickhere=Módosításhoz kattintson ide
+ubiquity.prefkeys.confirmchange=Your key has been changed to
 # chrome://ubiquity/content/localization-template.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Press your combination...
+#
+
+# cmdlist.js
+
+# chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=unsubscribe
 ubiquity.cmdlist.feedupdated=An update for this feed is available.
@@ -66,17 +75,17 @@ ubiquity.cmdlist.resubscribe=resubscribe
 ubiquity.cmdlist.purge=purge
 #
 
-# cmdlist.js
-
-# chrome://ubiquity/content/cmdlist.xhtml
-
-ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
-ubiquity.subscription.successheader=Subscription Successful
-#
-
 # the "show/hide help" messages.
 
 ############################
+
+ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
+ubiquity.subscription.successheader=Subscription Successful
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=This change will take effect when you restart Firefox.
 ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
