--- a/ubiquity/chrome/locale/nl/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/nl/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Uw opdrachten
 ubiquity.nav.getnewcommands=Zoek nieuwe opdrachten
 ubiquity.nav.support=Ondersteuning
 ubiquity.nav.hackubiquity=Werk mee aan Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 ############################
 
 ############################
@@ -36,19 +37,27 @@ ubiquity.showhidehelp.hide=Verberg Help
 
 # confirm-add-js.js
 
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=U moet een bewerkers toets hebben zoals SHIFT, CTRL, ALT of META.
-ubiquity.prefkeys.clickhere=Klik hier om te wijzigen
-ubiquity.prefkeys.confirmchange=Uw toets is gewijzigd naar
 ############################
 
-ubiquity.prefkeys.pressyourcombo=Typ uw combanitie...
 ############################
 
 # localization-template.js
 
+ubiquity.prefkeys.notifybadmodifier=U moet een bewerkers toets hebben zoals SHIFT, CTRL, ALT of META.
+ubiquity.prefkeys.clickhere=Klik hier om te wijzigen
+ubiquity.prefkeys.confirmchange=Uw toets is gewijzigd naar
 # chrome://ubiquity/content/localization-template.xhtml
+
+ubiquity.prefkeys.pressyourcombo=Typ uw combanitie...
+#
+
+# cmdlist.js
+
+# chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=uitschrijven
 ubiquity.cmdlist.feedupdated=Een update voor deze feed is beschikbaar.
@@ -66,17 +75,17 @@ ubiquity.cmdlist.resubscribe=herinschrijven
 ubiquity.cmdlist.purge=compleet verwijderen
 #
 
-# cmdlist.js
-
-# chrome://ubiquity/content/cmdlist.xhtml
-
-ubiquity.subscription.successtitle=Ubiquity opdracht feed inschrijving succesvol
-ubiquity.subscription.successheader=Inschrijving succesvol
-#
-
 # the "show/hide help" messages.
 
 ############################
+
+ubiquity.subscription.successtitle=Ubiquity opdracht feed inschrijving succesvol
+ubiquity.subscription.successheader=Inschrijving succesvol
+############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Deze verandering zal pas effect hebben wanneer u Firofox herstart.
 ubiquity.settings.opennewwindows=Deze verandering zal effect hebben wanneer u nieuwe vensters opent.
