--- a/ubiquity/chrome/locale/nl/coreubiquity.properties
+++ b/ubiquity/chrome/locale/nl/coreubiquity.properties
@@ -8,8 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Type de naam van de opdracht, en druk op enter o
 
 #
 
+ubiquity.cmdutils.noactiondef=No action defined.
+ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Zoekt op %S  naar uw woorden.
 ubiquity.cmdutils.searchcmd=Zoekt op %S naar: <strong>%S</strong>
+ubiquity.cmdutils.loadingresults=Loading results...
+ubiquity.cmdutils.searchparserror=Error parsing search results.
+ubiquity.cmdutils.parsedresultsfound=Results for %S:
+ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
 ubiquity.cmdutils.bookmarkletexec=Voert de <strong>%S</strong> bookmarklet uit.
 #
 
@@ -18,6 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Voert de <strong>%S</strong> bookmarklet uit.
 ubiquity.feedmanager.didyouknow=Wist u dat er een Ubiquity opdracht was voor deze website?
 ubiquity.feedmanager.showme=Tonen!
 ubiquity.feedmanager.dontremind=Herriner me er niet meer aan voor deze website
+ubiquity.feedmanager.neverremind=Never remind me
 ubiquity.feedmanager.newcommandfound=Deze pagina bevat Ubiquity opdrachten. Als u op deze opdrachten wilt inschrijven klik dan op de rechtse knop.
 ubiquity.feedmanager.subscribe=Inschrijven...
 #
