--- a/ubiquity/chrome/locale/pt-PT/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/aboutubiquity.properties
@@ -10,6 +10,7 @@ ubiquity.nav.commands=Os seus comandos
 ubiquity.nav.getnewcommands=Obter novos comandos
 ubiquity.nav.support=Suporte
 ubiquity.nav.hackubiquity=Criar comandos
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 #
 
 #
@@ -30,6 +31,14 @@ ubiquity.showhidehelp.show=Mostrar Ajuda
 ubiquity.showhidehelp.hide=Ocultar Ajuda
 #
 
+#
+
+#
+
+#
+
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 #
 
 #
@@ -72,11 +81,11 @@ ubiquity.cmdlist.purge=banir
 
 ubiquity.subscription.successtitle=Subscrição do Feed de comandos do Ubiquity concluída com sucesso
 ubiquity.subscription.successheader=Subscrição concluída com sucesso
-#
+############################
 
-#
+# /chrome/content/settings.js
 
-#
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Esta alteração terá efeito após reiniciar o Firefox.
 ubiquity.settings.opennewwindows=Esta alteração terá efeito quando abrir novas janelas.
